--- a/css/variables.css
+++ b/css/variables.css
@@ -12,6 +12,9 @@
     --ms-yellow: #ffb900;
     --ms-yellow-light: #ffd24d;
     --ms-yellow-dark: #d39c00;
+    --ms-red: #d13438;
+    --ms-orange: #d94a1e;
+    --ms-teal: #008575;
     
     /* Copilot specific */
     --copilot-bg: #2d2d2d;
